# stm32f4x-blinky-rs

./: Cargo.toml  README.md
src/: main.rs
